# package-scan

./: .coveragerc  .isort.cfg  .pre-commit-config.yaml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE.txt  README.rst  setup.cfg  setup.py
docs/: conf.py  index.rst
src/package_scan/: __init__.py  skeleton.py
tests/: conftest.py  test_skeleton.py
