[metadata]
name = package-scan
description = Detect required packages
author = Max Simmons
author_email = max@mxsmns.net
license = MIT
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/mxsmns/package-scan.git
platforms = any


[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src
install_requires =
    importlib-metadata; python_version>="3.6"


[options.packages.find]
where = src
exclude =
    tests
testing =
    setuptools
    pytest
    pytest-cov


[tool:pytest]
addopts =
    --cov package_scan --cov-report term-missing:skip-covered
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests


[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no_vcs = 1
formats = bdist_wheel


[flake8]
max_line_length = 88
extend_ignore = E203, W503
extend-exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py


[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 4.1
package = package_scan
extensions =
    pre_commit
